
	* Fixed piVars initialisation when going back from error page
	* Added new option to send empty values (and markers) in emails
	* Fixed labels.allowTags at is was broken due to security update
	* Force absolute links in email texts
	* Cleaned up static/pi1/setup.txt
	* Added Feature #40874: bold tag (<b>) inside class.tx_powermail_mandatory.php (Thanks to Simon)

2012-08-18 Nicole Cordes <cordes@cps-it.de>

	* Removed support for TYPO3 versions lower than TYPO3 4.5
	* Fixed deprecated function to support greater TYPO3 6.0

2012-08-10 Nicole Cordes <cordes@cps-it.de>

	* Added feature to disable mail storage with empty plugin or typoscript setting
	* Added security fix of version 1.6.9
	* Added constants for date selectors and trigger icon

2012-07-13 Nicole Cordes <cordes@cps-it.de>

	* Fixed Task #37630: Remove require_once functions
	* Fixed Bug #37853: Error code in ext:powermail/pi1/class.tx_powermail_mandatory.php (Thanks to Rabehasy)

2012-06-29  Alexander Grein <alexander.grein@typovision.de>

	* Fixed Bug in export (HTML/CSV/EXCEL) which mixed up values in different columns

2012-06-29  Nicole Cordes <cordes@cps-it.de>

	* Revised constants categories and subcategories
	* Added new option to select to scroll to the first error on a form (plugin.powermail.js.scrollToError)

2012-06-28  Nicole Cordes <cordes@cps-it.de>

	* Fixed Bug #32941: datetime field validation via jquery 08:00 - 09:00 is broken
	* Changed hard links to jQuery CDN in typoscript setup to configuration parameter
	* Fixed Bug #33021: No Icon in New Content Element wizard when using explicitADMode = explicitAllow
	* Fixed Bug #32296: Page within a mountpoint using "Show Content from Page" results in 503 header
	* Added new option to show only one jQuery validation error at the same time (plugin.powermail.js.singleError)

2012-06-27  Nicole Cordes <cordes@cps-it.de>
